--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <!-- Link to the external CSS in the css folder -->
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/index.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    />
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="#">Home</a>
         <a href="#">About Us</a>
         <a href="#">Our Courses</a>
         <a href="#">Technical Mentor</a>
@@ -66,8 +76,114 @@
       </div>
     </section>
 
+    <!-- why-choose-us -->
+
+    <section class="why-choose-us">
+      <div class="container">
+        <h2>Why Choose Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <div class="features">
+          <div class="feature">
+            <div class="icon"><i class="fas fa-calendar-alt"></i></div>
+            <h3>Flexible Timing</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="feature">
+            <div class="icon"><i class="fas fa-users"></i></div>
+            <h3>Expert Teachers</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="feature">
+            <div class="icon"><i class="fas fa-clock"></i></div>
+            <h3>24/7 Live Support</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer start -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-row">
+          <!-- Programs Section -->
+          <div class="footer-column">
+            <h3>Programs</h3>
+            <ul>
+              <li><a href="#">Corporate</a></li>
+              <li><a href="#">One to One</a></li>
+              <li><a href="#">Consulting</a></li>
+            </ul>
+          </div>
+          <!-- Service Section -->
+          <div class="footer-column">
+            <h3>Service</h3>
+            <ul>
+              <li><a href="#">Training</a></li>
+              <li><a href="#">Coaching</a></li>
+              <li><a href="#">Consulting</a></li>
+            </ul>
+          </div>
+          <!-- Contact Section -->
+          <div class="footer-column">
+            <h3>Contact</h3>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <!-- Newsletter Section -->
+          <div class="footer-column newsletter">
+            <h3>Newsletter</h3>
+            <form>
+              <input type="email" placeholder="Email Address" required />
+              <button type="submit">Subscribe</button>
+            </form>
+            <!-- Social Media Icons -->
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <!-- Contact Info -->
+            <div class="contact-info">
+              <p>Mobile: +91 7898474250</p>
+              <p>Email: samthosh@crosscultureconnects.com</p>
+            </div>
+          </div>
+        </div>
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+          <p>&copy; 2023 crosscultureconnects.com</p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- footer end -->
+
     <!-- Link to the external JavaScript in the js folder -->
     <script src="js/toggle.js"></script>
     <script src="js/index.js"></script>
+    <!--   *****   JQuery Link   *****   -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+    <!--   *****   Owl Carousel js Link  *****  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   </body>
 </html>
