--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Our Courses</a>
-        <a href="#">Technical Mentor</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Apply</a>
+        <a href="in">Home</a>
+        <a href="AboutUs.html">About Us</a>
+        <a href="courses.html">Our Courses</a>
+        <a href="mentors.html">Technical Mentor</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="applay.html">Apply</a>
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
