--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
-        <a href="in">Home</a>
+        <a href="index.html">Home</a>
         <a href="AboutUs.html">About Us</a>
         <a href="courses.html">Our Courses</a>
         <a href="mentors.html">Technical Mentor</a>
