--- a/AboutUs.html
+++ b/AboutUs.html
@@ -71,6 +71,110 @@
         <img src="images/slide1.jpg" alt="Team Working" />
       </div>
     </section>
+    <!-- what we do -->
+    <section class="what-we-do">
+      <div class="container">
+        <h2 class="section-title">WHAT WE DO</h2>
+        <p class="section-description">
+          We understand that when it comes to electrical issues, you need fast
+          and effective solutions. Our skilled team delivers reliable service
+          that’s always focused on safety, quality, and efficiency.
+        </p>
+        <div class="features">
+          <div class="feature-card">
+            <div class="icon">⚡</div>
+            <h3>Swift Response</h3>
+            <p>Count on us for prompt service when you need it most.</p>
+            <a href="#" class="learn-more">Learn more →</a>
+          </div>
+          <div class="feature-card">
+            <div class="icon">🔧</div>
+            <h3>Trusted Experts</h3>
+            <p>
+              Our electricians are certified and experienced, ensuring top
+              quality work.
+            </p>
+            <a href="#" class="learn-more">Learn more →</a>
+          </div>
+          <div class="feature-card">
+            <div class="icon">🔒</div>
+            <h3>Safety First</h3>
+            <p>
+              We prioritize safety in every project, keeping your home or
+              business secure.
+            </p>
+            <a href="#" class="learn-more">Learn more →</a>
+          </div>
+          <div class="feature-card">
+            <div class="icon">💡</div>
+            <h3>Affordable Solutions</h3>
+            <p>High-quality service at prices that work for you.</p>
+            <a href="#" class="learn-more">Learn more →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer start -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-row">
+          <!-- Programs Section -->
+          <div class="footer-column">
+            <h3>Programs</h3>
+            <ul>
+              <li><a href="#">Corporate</a></li>
+              <li><a href="#">One to One</a></li>
+              <li><a href="#">Consulting</a></li>
+            </ul>
+          </div>
+          <!-- Service Section -->
+          <div class="footer-column">
+            <h3>Service</h3>
+            <ul>
+              <li><a href="#">Training</a></li>
+              <li><a href="#">Coaching</a></li>
+              <li><a href="#">Consulting</a></li>
+            </ul>
+          </div>
+          <!-- Contact Section -->
+          <div class="footer-column">
+            <h3>Contact</h3>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <!-- Newsletter Section -->
+          <div class="footer-column newsletter">
+            <h3>Newsletter</h3>
+            <form>
+              <input type="email" placeholder="Email Address" required />
+              <button type="submit">Subscribe</button>
+            </form>
+            <!-- Social Media Icons -->
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <!-- Contact Info -->
+            <div class="contact-info">
+              <p>Mobile: +91 7898474250</p>
+              <p>Email: samthosh@crosscultureconnects.com</p>
+            </div>
+          </div>
+        </div>
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+          <p>&copy; 2023 crosscultureconnects.com</p>
+        </div>
+      </div>
+    </footer>
 
     <!-- AOS JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
