--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Noor Bootcamp</title>
     <!-- Link to the external CSS in the css folder -->
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/navbar.css" />
 
     <link
@@ -71,45 +71,45 @@
         <img src="images/slide1.jpg" alt="Team Working" />
       </div>
     </section>
-    <!-- what we do -->
-    <section class="what-we-do">
+    <!-- what we offer -->
+    <section class="what-we-offer">
       <div class="container">
-        <h2 class="section-title">WHAT WE DO</h2>
-        <p class="section-description">
+        <h2 class="offer-section-title">WHAT WE DO</h2>
+        <p class="offer-section-description">
           We understand that when it comes to electrical issues, you need fast
           and effective solutions. Our skilled team delivers reliable service
           that’s always focused on safety, quality, and efficiency.
         </p>
-        <div class="features">
-          <div class="feature-card">
+        <div class="offer-features">
+          <div class="offer-feature-card">
             <div class="icon">⚡</div>
             <h3>Swift Response</h3>
             <p>Count on us for prompt service when you need it most.</p>
-            <a href="#" class="learn-more">Learn more →</a>
+            <a href="#" class="offer-learn-more">Learn more →</a>
           </div>
-          <div class="feature-card">
+          <div class="offer-feature-card">
             <div class="icon">🔧</div>
             <h3>Trusted Experts</h3>
             <p>
               Our electricians are certified and experienced, ensuring top
               quality work.
             </p>
-            <a href="#" class="learn-more">Learn more →</a>
+            <a href="#" class="offer-learn-more">Learn more →</a>
           </div>
-          <div class="feature-card">
+          <div class="offer-feature-card">
             <div class="icon">🔒</div>
             <h3>Safety First</h3>
             <p>
               We prioritize safety in every project, keeping your home or
               business secure.
             </p>
-            <a href="#" class="learn-more">Learn more →</a>
+            <a href="#" class="offer-learn-more">Learn more →</a>
           </div>
-          <div class="feature-card">
+          <div class="offer-feature-card">
             <div class="icon">💡</div>
             <h3>Affordable Solutions</h3>
             <p>High-quality service at prices that work for you.</p>
-            <a href="#" class="learn-more">Learn more →</a>
+            <a href="#" class="offer-learn-more">Learn more →</a>
           </div>
         </div>
       </div>
@@ -178,5 +178,6 @@
 
     <!-- AOS JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="js/toggle.js"></script>
   </body>
 </html>
